Fixed the progress bars not showing Changed footer to use the Bootstrap's grid

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,7 +29,7 @@
 }
 
 .user_gravatar {
-      margin-top:20px;
+      margin-bottom:18px;
 }
 
 .badge-info a,
